--- a/CruiseTheNews/Storyboards/Base.lproj/Main.storyboard
+++ b/CruiseTheNews/Storyboards/Base.lproj/Main.storyboard
@@ -26,8 +26,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jrP-Vs-Yem">
-                                            <rect key="frame" x="16" y="5" width="73" height="20.5"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jrP-Vs-Yem">
+                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -36,14 +36,14 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8jp-kd-z9V">
                                             <rect key="frame" x="16" y="25.5" width="38" height="14.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="zhf-r6-gDE" kind="show" id="pta-8Y-7QH"/>
+                                    <segue destination="zhf-r6-gDE" kind="show" identifier="toDetail" id="pta-8Y-7QH"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -66,26 +66,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="L2q-vQ-Pwl">
-                                <rect key="frame" x="16" y="80" width="343" height="571"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="L2q-vQ-Pwl">
+                                <rect key="frame" x="16" y="80" width="343" height="71.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jem-kE-EWg">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="21.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jem-kE-EWg">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w0-Rq-aw6">
-                                        <rect key="frame" x="0.0" y="71.5" width="343" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w0-Rq-aw6">
+                                        <rect key="frame" x="0.0" y="25.5" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UxQ-ZH-7nu">
-                                        <rect key="frame" x="0.0" y="143.5" width="343" height="347"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Article" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Qk-M0b">
-                                        <rect key="frame" x="0.0" y="540.5" width="343" height="30.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Article" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Qk-M0b">
+                                        <rect key="frame" x="0.0" y="51" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -98,10 +95,15 @@
                             <constraint firstItem="hlh-sL-F7l" firstAttribute="trailing" secondItem="L2q-vQ-Pwl" secondAttribute="trailing" constant="16" id="KZN-Ew-sBb"/>
                             <constraint firstItem="L2q-vQ-Pwl" firstAttribute="top" secondItem="hlh-sL-F7l" secondAttribute="top" constant="16" id="e7V-oo-oxK"/>
                             <constraint firstItem="L2q-vQ-Pwl" firstAttribute="leading" secondItem="hlh-sL-F7l" secondAttribute="leading" constant="16" id="oHG-6Y-R2x"/>
-                            <constraint firstItem="hlh-sL-F7l" firstAttribute="bottom" secondItem="L2q-vQ-Pwl" secondAttribute="bottom" constant="16" id="u9U-YN-29W"/>
+                            <constraint firstItem="hlh-sL-F7l" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="L2q-vQ-Pwl" secondAttribute="bottom" constant="16" id="u9U-YN-29W"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hlh-sL-F7l"/>
                     </view>
+                    <connections>
+                        <outlet property="articleContentLabel" destination="o4D-Qk-M0b" id="DgH-at-tNx"/>
+                        <outlet property="authorLabel" destination="4w0-Rq-aw6" id="mfh-x0-rfR"/>
+                        <outlet property="titleLabel" destination="Jem-kE-EWg" id="DaR-pc-qJg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9VL-LW-2yJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
